--- a/package.json
+++ b/package.json
@@ -44,9 +44,12 @@
     "cookie-parser": "1.4.5",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
+    "csurf": "1.11.0",
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "express-session": "1.17.2",
+    "express-validator": "6.12.1",
+    "helmet": "4.6.0",
     "multer": "1.4.2",
     "nanoid": "3.1.23",
     "pg": "8.6.0",
